--- a/example/storybook/src/advanced/Specificity/index.stories.mdx
+++ b/example/storybook/src/advanced/Specificity/index.stories.mdx
@@ -75,7 +75,7 @@ The **`getWeightBaseOnPath`** function is used to calculate the specificity of a
 
 In summary, the **`getWeightBaseOnPath`** function is a helpful utility function for determining the specificity of styles in your CSS in JS library, and it allows for easy and consistent calculation of specificity across your application. It also makes it easy to understand the precedence of styles, as the order of the keys in the path array corresponds directly to the order of precedence of the styles. With this function, you can easily determine which styles will be applied to a given element, and make sure that the styles you want to be applied are the ones with the highest specificity.
 
-It's also worth noting that this library supports default variant, you can pass the variant prop in the defaultProps property when defining a component. And also it has support for media query, context based styling, colorMode, sizes and variants. It also allows you to configure breakpoints, customize theming and even supports server side rendering.
+It's also worth noting that this library supports default variant, you can pass the variant prop in the defaultProps property when defining a component. And also it has **support for media query, context based styling, colorMode, sizes and variants**. It also allows you to **configure breakpoints, customize theming and even supports server side rendering**.
 
 It also allows you to override styles using the **`sx`** prop, which takes the same input as the base style. And also it exports **`StyledProvider`** which can take config prop for configuration.
 
