--- a/example/storybook/src/api/PlatformBasedStyles/index.stories.mdx
+++ b/example/storybook/src/api/PlatformBasedStyles/index.stories.mdx
@@ -14,7 +14,7 @@ import { config } from './config';
 
 # Platform Based Styles
 
-This allows you to easily create styles that are specific to a particular platform that is, Web, iOS, or Android.
+This allows you to easily create styles that are specific to a particular platform that is, **Web**, **iOS**, or **Android**.
 
 <AppProvider>
   <CodePreview
