--- a/example/storybook/src/api/PropertyResolver/index.stories.mdx
+++ b/example/storybook/src/api/PropertyResolver/index.stories.mdx
@@ -9,7 +9,7 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 # Property Resolver
 
-Dank-style allows you to modify the resolution of value of any style property that you pass by providing a callback function against any style property that can be passed in your dank.config file or while creating a component using styled. So suppose you want to add support for rgba values in `background-color` you can follow the below example.
+Dank-style allows you to modify the resolution of value of any style property that you pass by providing a callback function against any style property that can be passed in your `dank.config` file or while creating a component using styled. So suppose you want to add support for rgba values in `background-color` you can follow the below example.
 
 ```tsx
 function hexToRgba(hex, alpha) {
