--- a/example/storybook/src/api/Variants/index.stories.mdx
+++ b/example/storybook/src/api/Variants/index.stories.mdx
@@ -17,7 +17,7 @@ import { useState } from 'react';
 
 Dank allows you to easily create different variations of a component with different styles.
 
-Using variant props in a UI component library allows for more flexibility and reusability of components.
+**Using variant props in a UI component library allows for more flexibility and reusability of components**.
 
 ### Adding a variant
 
