--- a/example/storybook/src/getting-started/Installation/index.stories.mdx
+++ b/example/storybook/src/getting-started/Installation/index.stories.mdx
@@ -9,7 +9,7 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 # Installation
 
-To get started with dank, you'll need to install it using either npm or yarn. These are popular package managers for JavaScript, and either one should work fine.
+To get started with dank, you'll need to install it using either **npm** or **yarn**. These are popular package managers for JavaScript, and either one should work fine.
 
 ```bash
 # using npm
@@ -111,7 +111,7 @@ const App = () => {
 export default App;
 ```
 
-You will also need to add the babel plugin to your project if you want to perform all style calculations during build time. The plugin can be installed via npm or yarn and should be added to your babel config.
+You will also need to add the babel plugin to your project if you want to perform all style calculations during build time. **The plugin can be installed via npm or yarn and should be added to your babel config**.
 
 ```bash
   npm install --save-dev @dank-style/babel-plugin-styled-resolver
@@ -134,7 +134,7 @@ module.exports = {
 
 ## Server-side rendering
 
-It's also recommended to set up your server-side rendering (SSR) correctly. To do this, you will need to use the flush() function exported by the library and call it in your \_document.js file.
+It's also recommended to set up your server-side rendering (SSR) correctly. To do this, you will need to use the flush() function exported by the library and call it in your `\_document.js` file.
 
 ```jsx
 import * as React from 'react';
