--- a/example/storybook/src/getting-started/Styled/index.stories.mdx
+++ b/example/storybook/src/getting-started/Styled/index.stories.mdx
@@ -16,7 +16,7 @@ import {
 
 # styled()
 
-With our `styled` function, you can easily extend existing components and make them customizable and themeable.
+With our `styled` function, you can easily extend existing components and make them **customizable and themeable**.
 
 Let’s create a styled component
 
