--- a/example/storybook/src/overview/Performance/index.stories.mdx
+++ b/example/storybook/src/overview/Performance/index.stories.mdx
@@ -9,10 +9,10 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 # Performance
 
-Dank prioritizes performance and is optimized for even complex applications with many elements. With a babel plugin for pre-computing styles during the build process, and runtime performance optimizations, dank delivers high performance styling.
+Dank prioritizes performance and is optimized for even complex applications with many elements. **With a babel plugin for pre-computing styles during the build process, and runtime performance optimizations, dank delivers high performance styling**.
 
-We tested the performance of our landing page, built with `dank` and a large number of elements, using Lighthouse and achieved a high score of 98 for Performance, 90 for Accessibility, 100 for Best Practices, and 90 for SEO.You can check out the website and see the Lighthouse report for yourself.
+We tested the performance of our landing page, built with `dank` and a large number of elements, using Lighthouse and achieved a **high score of 98 for Performance, 90 for Accessibility, 100 for Best Practices, and 90 for SEO**. You can check out the website and see the Lighthouse report for yourself.
 
 Dank also supports Server-Side Rendering (SSR) through the flush function, which allows styles to be rendered on the server and hydrated on the client, eliminating the FOUC(Flash of Unstyled Content) issue and improving the overall user experience.
 
-In conclusion, dank is designed to deliver high performance styling, and we continue to make optimizations to ensure it remains efficient and fast.
+In conclusion, dank is designed to deliver **high performance styling**, and we continue to make optimizations to ensure it remains efficient and fast.
