--- a/example/storybook/src/overview/Introduction/index.stories.mdx
+++ b/example/storybook/src/overview/Introduction/index.stories.mdx
@@ -9,17 +9,17 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 # Introduction
 
-Dank is a high-performing styling CSS-in-JS library for React and React Native that allows developers to create **scalable and maintainable styles** quickly and effectively.
-
+Dank is a high-performing **styling** library for React and React Native that allows developers to create **scalable and maintainable styles** quickly and effectively.
 
 ## Why we built dank.style?
 
-Dank is different from other CSS-in-JS libraries like Glamour, Emotion, Styled-components, and Vanilla-extract because it focuses on React Native while still being universal and high-performing on the web. Unlike other libraries, dank's styles are calculated during compile-time **using a babel-plugin**, which reduces the amount of processing needed during runtime. This means that with Server-Side Rendering (SSR) and Static Site Generation (SSG), pages created with dank can even run without JavaScript on the client, including media queries.
+Dank is different from other styling libraries like Glamour, Emotion, Styled-components, and Vanilla-extract because it focuses on React Native while still being universal and high-performing on the web. Unlike other libraries, dank's styles are calculated during compile-time **using a babel-plugin**, which reduces the amount of processing needed during runtime. This means that with Server-Side Rendering (SSR) and Static Site Generation (SSG), pages created with dank can even run without JavaScript on the client, including media queries.
 
-Dank originally started as part of NativeBase, a universal component library for both React and React Native. However, we realized that not everyone needs all the components from NativeBase, so we broke it down into two separate libraries:
+Dank originally started as part of NativeBase, a universal component library for both React and React Native. However, we realized that not everyone needs all the components from NativeBase, so we broke it down into three separate libraries:
 
-- [dank.style](https://dank.style) - The high-performing and universal CSS-in-JS library.
-- [ui.gluestack.io](https://ui.gluestack.io/) (coming soon) - A set of ready-to-use universal components that can be added to any project and styled to fit your needs. You can even customize the components as desired.
+- [dank.style](https://dank.style) - The high-performing and universal styling library.
+- [universa11y.dev](https://universa11y.dev) (coming soon) - A collection of HOCs that adds accessibility to low-level [dank.style](https://dank.style) components or any component with the same prop type.
+- gluestack-ui (coming soon) - A set of ready-to-use universal components that can be added to any project and styled to fit your needs. You can even customize the components as desired.
 
 ## But aren’t React Native and React Native Web sufficient?
 
@@ -28,11 +28,11 @@ Dank and React Native Web aren’t directly comparable as they are different.
 React Native Web has two parts
 
 - A set of low-level components
-- A CSS-in-JS library to style those components
+- A styling library to style those components
 
 **Whereas dank is a styling library**
 
-- A CSS-in-JS library to style any given React / React Native component
+- A styling library to style any given React / React Native component
 - A theming solution (improve this writing)
 - Each component built with dank can be styled with
   - Tokens
@@ -55,7 +55,7 @@ While NativeBase provides a comprehensive solution for building web and mobile a
 
 ## Goals
 
-- Universal CSS-in-JS solution (implementation per platform can differ)
+- Universal styling solution (implementation per platform can differ)
 - Consistent API for developers
 - Solve CSS Specificity
 - TypeScript everything
@@ -71,8 +71,8 @@ While NativeBase provides a comprehensive solution for building web and mobile a
 ## Non goals
 
 - Don’t solve problems beyond styling!
-- Accessibility (check gluestack-ui)
-- Design (check gluestack-ui again!)
+- Accessibility (check universa11y.dev)
+- Design (check gluestack-ui)
 - Animation (check examples with Legend-Motion)
 
 ## Future Considerations:
