feat: development fixes

--- a/example/storybook/src/components/Button/index.stories.mdx
+++ b/example/storybook/src/components/Button/index.stories.mdx
@@ -5,7 +5,7 @@ pageTitle: Button
 pageDescription: A Button component is used to create clickable elements that perform an action when pressed.
 ---
 
-import { Canvas, Meta, Story } from '@storybook/addon-docs';
+import { Meta } from '@storybook/addon-docs';
 
 <Meta title="components/Button" />
 
