--- a/example/storybook/src/components/Box/index.stories.mdx
+++ b/example/storybook/src/components/Box/index.stories.mdx
@@ -5,7 +5,8 @@ pageTitle: Box
 pageDescription: This is a generic component for low level layout needs. It is similar to a div in HTML.
 ---
 
-import { Canvas, Meta, Story } from '@storybook/addon-docs';
+import { Meta } from '@storybook/addon-docs';
+import { useRef, useEffect, useState } from 'react';
 
 <Meta title="components/Box" />
 
@@ -54,16 +55,26 @@ export default () => (
     showArgsController={false}
     metaData={{
       code: `
-<Button>
-  <Button.Text>Button</Button.Text>
-</Button>
+<Box
+  h="$20"
+  w="$20"
+  bg="$primary500"
+  p="$20"
+  justifyContent="center"
+  alignItems="center"
+>
+  <Text color="white" fontWeight="bold">
+    BOX
+  </Text>
+</Box>
 `,
       transformCode: (code) => {
         return transformedCode(code);
       },
       scope: {
         Wrapper,
-        Button,
+        Box,
+        Text,
       },
       argsType: {},
     }}
@@ -73,385 +84,28 @@ export default () => (
 
 ## Anatomy
 
-The button component consists of the following parts:
+The box component consists of the following parts:
 
 ```jsx
 export default () => (
-  <Button.Group>
-    <Button>
-      <Button.Text>Button</Button.Text>
-      <Button.Spinner />
-    </Button>
-  </Button.Group>
+  <Box>
+    <Text>Box</Text>
+  </Box>
 );
 ```
 
 ## API Reference
 
-### Button
+### Box
 
-Contains all button related layout style props and actions.
-It inherits all the properties of React Native's [Pressable](https://reactnative.dev/docs/pressable#props) component.
-
-<AppProvider>
-  <Table>
-    <Table.THead sx={{ _dark: { bg: '$gray800' }, _light: { bg: '$gray100' } }}>
-      <Table.TR>
-        <Table.TH>
-          <Text>Prop</Text>
-        </Table.TH>
-        <Table.TH>
-          <Text>Type</Text>
-        </Table.TH>
-        <Table.TH>
-          <Text>Default</Text>
-        </Table.TH>
-        <Table.TH>
-          <Text>Description</Text>
-        </Table.TH>
-      </Table.TR>
-    </Table.THead>
-    <Table.TBody>
-      <Table.TR>
-        <Table.TD>
-          <Text>isLoading</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>bool</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>false</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>When true, its loading state activates.</Text>
-        </Table.TD>
-      </Table.TR>
-      <Table.TR>
-        <Table.TD>
-          <Text>isHovered</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>bool</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>false</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>To manually set hover to the button.</Text>
-        </Table.TD>
-      </Table.TR>
-      <Table.TR>
-        <Table.TD>
-          <Text>isPressed</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>bool</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>false</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>To manually set pressable state to the button.</Text>
-        </Table.TD>
-      </Table.TR>
-      <Table.TR>
-        <Table.TD>
-          <Text>isFocused</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>bool</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>false</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>To manually set focused state to the button.</Text>
-        </Table.TD>
-      </Table.TR>
-      <Table.TR>
-        <Table.TD>
-          <Text>isDisabled</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>bool</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>false</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>To manually set disable to the button.</Text>
-        </Table.TD>
-      </Table.TR>
-    </Table.TBody>
-  </Table>
-</AppProvider>
-
-### Button.Text
-
-Contains all text related layout style props and actions.
-It inherits all the properties of React Native's [Text](https://reactnative.dev/docs/text#props) component.
-
-### Button.Group
-
-Contains all group related layout style props and actions.
 It inherits all the properties of React Native's [View](https://reactnative.dev/docs/view#props) component.
-
-<AppProvider>
-  <Table>
-    <Table.THead sx={{ _dark: { bg: '$gray800' }, _light: { bg: '$gray100' } }}>
-      <Table.TR>
-        <Table.TH>
-          <Text>Prop</Text>
-        </Table.TH>
-        <Table.TH>
-          <Text>Type</Text>
-        </Table.TH>
-        <Table.TH>
-          <Text>Default</Text>
-        </Table.TH>
-        <Table.TH>
-          <Text>Description</Text>
-        </Table.TH>
-      </Table.TR>
-    </Table.THead>
-    <Table.TBody>
-      <Table.TR>
-        <Table.TD>
-          <Text>direction</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>'column' or 'row'</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>'row'</Text>
-        </Table.TD>
-        <Table.TD></Table.TD>
-      </Table.TR>
-      <Table.TR>
-        <Table.TD>
-          <Text>isDisabled</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>bool</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>false</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>
-            When true, This will disable all Table.THe buttons in a ButtonGroup
-          </Text>
-        </Table.TD>
-      </Table.TR>
-      <Table.TR>
-        <Table.TD>
-          <Text>isAttached</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>bool</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>true</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>
-            When attached, all buttons will be attached to each other.
-          </Text>
-        </Table.TD>
-      </Table.TR>
-      <Table.TR>
-        <Table.TD>
-          <Text>reversed</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>bool</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>false</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>To reverse the order of components</Text>
-        </Table.TD>
-      </Table.TR>
-    </Table.TBody>
-    <Table.TFoot>
-      <Table.TR>
-        <Table.TD>
-          <Text>reversed</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>bool</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>false</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>To reverse the order of components</Text>
-        </Table.TD>
-      </Table.TR>
-    </Table.TFoot>
-  </Table>
-</AppProvider>
-
-### Button.Spinner
-
-Contains all spinner related layout style props and actions.
-It inherits all the properties of React Native's [ActivityIndicator](https://reactnative.dev/docs/activityindicator#props) component.
-
-## Features
-
-- Keyboard support for actions.
-- Support for hover, focus and active states.
-- Option to add your styles or use the default styles.
-
-## Accessibility
-
-### Keyboard
-
-- Tab: Moves focus to the next focusable element.
-- `Shift + Tab`: Moves focus to the previous focusable element.
-- Enter: Triggers the button's action.
-
-### Screen Reader
-
-- VoiceOver: When the button is focused, the screen reader will announce the button's label and its current state.
-
-## Dependencies
-
-- `@gluestack-ui/button`
-- `@gluestack-ui/utils`
-- `@react-native-aria/focus`
-- `react-native-svg`
 
 <br />
 <br />
 
 ## Examples
 
-### Button Sizes
-
-<AppProvider>
-  <CodePreview
-    showComponentRenderer={true}
-    showArgsController={false}
-    metaData={{
-      code: `
-<Button mt="$4" size='xs'>
-  <Button.Text>Button</Button.Text>
-</Button>
-<Button mt="$4" size='sm'>
-  <Button.Text>Button</Button.Text>
-</Button>
-<Button mt="$4" size='md'>
-  <Button.Text>Button</Button.Text>
-</Button>
-<Button mt="$4" size='lg'>
-  <Button.Text>Button</Button.Text>
-</Button>
-`,
-      transformCode: (code) => {
-        return transformedCode(code);
-      },
-      scope: { Button: Button, Wrapper: Wrapper },
-      argsType: {},
-    }}
-  />
-</AppProvider>
-
-<br />
-
-### Button Styles
-
-<AppProvider>
-  <CodePreview
-    showComponentRenderer={true}
-    showArgsController={false}
-    metaData={{
-      code: `
-<Button mt="$4" variant="solid">
-   <Button.Text>Button</Button.Text>
- </Button>
-<Button mt="$4" variant="outline">
-   <Button.Text>Button</Button.Text>
- </Button>
-<Button mt="$4" variant="link">
-   <Button.Text>Button</Button.Text>
- </Button>
-    `,
-      transformCode: (code) => {
-        return transformedCode(code);
-      },
-      scope: { Button, Wrapper },
-      argsType: {},
-    }}
-  />
-</AppProvider>
-
-<br />
-
-### Button Group
-
-<AppProvider>
-  <CodePreview
-    showComponentRenderer={true}
-    showArgsController={false}
-    metaData={{
-      code: `
-<Button.Group direction="row">
-  <Button>
-    <Button.Text>Button 1</Button.Text>
-  </Button>
-  <Button bg="$blue500">
-    <Button.Text>Button 2</Button.Text>
-  </Button>
-  <Button>
-    <Button.Text>Button 3</Button.Text>
-  </Button>
-</Button.Group>
-   `,
-      transformCode: (code) => {
-        return transformedCode(code);
-      },
-      scope: { Button, Wrapper },
-      argsType: {},
-    }}
-  />
-</AppProvider>
-
-<br />
-
-### Button With Icon
-
-<AppProvider>
-  <CodePreview
-    showComponentRenderer={true}
-    showArgsController={false}
-    metaData={{
-      code: `
- <Button>
-   <InfoIcon mr="$2" color="$white" />
-   <Button.Text>LeftIcon</Button.Text>
- </Button>
- <Button variant="solid" mt="$2">
-   <Button.Text>RightIcon</Button.Text>
-   <AddIcon ml="$2" color="$white" />
- </Button>
-      `,
-      transformCode: (code) => {
-        return transformedCode(code);
-      },
-      scope: {
-        Button,
-        Wrapper,
-        InfoIcon,
-        AddIcon,
-      },
-      argsType: {},
-    }}
-  />
-</AppProvider>
-
-### Loading Button
+### Box with ref
 
 <AppProvider>
   <CodePreview
@@ -460,72 +114,53 @@ It inherits all the properties of React Native's [ActivityIndicator](https://rea
     metaData={{
       code: `
 function App () {
-  const [isLoading] = React.useState(true);
-  return (
-    <Wrapper>
-      <Button
-        disabled={isLoading}
-        focusable={!isLoading}
-        opacity={isLoading ? 0.4 : 1}
-      >
-        <Button.Spinner color="white" mr="$2" />
-        <Button.Text>Submitting</Button.Text>
-      </Button>
-    </Wrapper>
-  );
-    }`,
-      scope: {
-        Button,
-        Wrapper,
-        InfoIcon,
-        AddIcon,
-      },
+  const myRef = useRef({});
+  useEffect(() => {
+    const styleObj = {
+      borderWidth: 8,
+      borderRadius: 4,
+      borderColor: '#22D3EE',
+    };
+    myRef.current.setNativeProps({
+      style: styleObj,
+    });
+  }, [myRef]);
+return (
+<Wrapper>
+  <Box sx={{ h: 100, w: 100, bg: '$red500' }} ref={myRef} />
+</Wrapper>
+);
+    }
+`,
+      scope: { Box, Wrapper, useRef, useEffect },
       argsType: {},
     }}
   />
 </AppProvider>
 
+<br />
+
 # Advanced
 
-## Customizing the Button
+## Customizing the Box
 
-We have a function called `createButton` which can be used to create a custom button component. This function takes in a configuration object which contains the styled components that you want to use for the button. You can refer [dank.style](https://dank.style/) for more information on how to use styled components.
+For customozing the Box, you have to map styled view to Box. You can refer [dank.style](https://dank.style/) for more information on how to use styled components.
 
 ### Usage
 
 ```jsx
 // import the styles
-import {
-  Root,
-  Text,
-  Group,
-  GroupHSpacer,
-  GroupVSpacer,
-  Spinner,
-} from './components/Button';
+import { Root } from './components/Box';
 
-// import the createButton function
-import { createButton } from '@gluestack-ui/button';
+// mapping the Box to root component
+const Box = Root;
 
-// Understanding the API
-const Button = createButton({
-  Root,
-  Text,
-  Group,
-  GroupHSpacer,
-  GroupVSpacer,
-  Spinner,
-});
-
-// Using the button component
+// Using the box component
 export default () => (
-  <Button.Group>
-    <Button>
-      <Button.Text />
-      <Button.Spinner />
-    </Button>
-  </Button.Group>
+  <Box>
+    <Text />
+  </Box>
 );
 ```
 
-Default styling of all these components can be found in the `components/Button` file. For reference, you can view the [source code](https://github.com/gluestack/universa11y/blob/development/example/storybook/src/components/styled-components/button/index.tsx) of the styled `Button` components.
+Default styling of the component can be found in the `components/Box` file. For reference, you can view the [source code](https://github.com/gluestack/universa11y/blob/development/example/storybook/src/components/styled-components/box/index.tsx) of the styled `Box` component.
