--- a/example/storybook/src/components/Link/index.stories.mdx
+++ b/example/storybook/src/components/Link/index.stories.mdx
@@ -110,3 +110,56 @@ Adheres to the [WAI-ARIA design pattern]('https://www.w3.org/WAI/ARIA/apg/#link'
 - `@universa11y/utils`
 - `@react-native-aria/focus`
 - `react-native-svg`
+
+## Examples
+
+### Link External
+
+<AppProvider>
+  <CodePreview
+    showComponentRenderer={true}
+    showArgsController={false}
+    metaData={{
+      code: ` 
+<Link href="https://gluestack.io/">
+  <Text>gluestack</Text>
+</Link>
+    `,
+      transformCode: (code) => {
+        return transformedCode(code);
+      },
+      scope: { Wrapper, Link, LinkText: Text },
+      argsType: {},
+    }}
+  />
+</AppProvider>
+
+# Advanced
+
+## Customizing the Link
+
+We have a function called `createButton` which can be used to create a custom button component. This function takes in a configuration object which contains the styled components that you want to use for the button. You can refer [dank.style](https://dank.style/) for more information on how to use styled components.
+
+### Usage
+
+```jsx
+// import the styles
+import { Root } from './components/Link';
+
+// import the createLink function
+import { createLink } from '@gluestack-ui/link';
+
+// Understanding the API
+const Link = createLink({
+  Root,
+});
+
+// Using the link component
+export default () => (
+  <Link>
+    <Text>Link</Text>
+  </Link>
+);
+```
+
+Default styling of the component can be found in the `components/Link` file. For reference, you can view the [source code](https://github.com/gluestack/universa11y/blob/development/example/storybook/src/components/styled-components/link/index.tsx) of the styled `Link` component.
