--- a/example/storybook/src/api/ColorModeBasedStyles/index.stories.mdx
+++ b/example/storybook/src/api/ColorModeBasedStyles/index.stories.mdx
@@ -59,15 +59,9 @@ const StyledComponent = styled(
   View,
   {
     baseStyle: {
-      style: {
-        bg: '$red500',
-      },
-      colorMode: {
-        dark: {
-          style: {
-            bg: '$info600',
-          },
-        },
+      bg: '$red500',
+      _dark: {
+        bg: '$info600',
       },
     },
   },
