--- a/example/storybook/src/api/StateBasesStyles/index.stories.mdx
+++ b/example/storybook/src/api/StateBasesStyles/index.stories.mdx
@@ -5,7 +5,7 @@ description: This allows you to create dynamic and interactive styles that chang
 
 import { Canvas, Meta, Story, Source } from '@storybook/addon-docs';
 
-<Meta title="api/State Bases Styles" />
+<Meta title="api/State Based Styles" />
 
 import { styled, StyledProvider } from '@dank-style/react';
 import { Pressable, Text } from 'react-native';
