--- a/example/storybook/src/configuration/ThemeTokens/index.stories.mdx
+++ b/example/storybook/src/configuration/ThemeTokens/index.stories.mdx
@@ -142,6 +142,8 @@ export const propertyTokenMap = {
 
   paddingHorizontal: space,
   paddingVertical: space,
+  paddingStart: space,
+  paddingEnd: space,
 
   top: space,
   right: space,
