--- a/example/storybook/src/api/Specificity/index.stories.mdx
+++ b/example/storybook/src/api/Specificity/index.stories.mdx
@@ -21,32 +21,24 @@ import { styled } from '@dank-style/react';
 const StyledButton = styled(
   View,
   {
-    baseStyle: {
-      style: {
-        borderRadius: 4,
-        flexDirection: 'row',
-        justifyContent: 'center',
-        alignItems: 'center',
-        outlineWidth: 0,
-        m: 12,
-      },
-    },
+    borderRadius: 4,
+    flexDirection: 'row',
+    justifyContent: 'center',
+    alignItems: 'center',
+    outlineWidth: 0,
+    m: 12,
     variants: {
-      bluebox: {
-        style: {
+      variant: {
+        bluebox: {
           bg: '$blue400',
         },
       },
-    },
-    sizes: {
-      sm: {
-        style: {
+      sizes: {
+        sm: {
           px: '$3',
           py: '$2',
         },
-      },
-      md: {
-        style: {
+        md: {
           px: '$4',
           py: '$3',
         },
