fix: reduced images size and updated meta tag values

--- a/example/storybook/src/api/createStyled/index.stories.mdx
+++ b/example/storybook/src/api/createStyled/index.stories.mdx
@@ -1,6 +1,6 @@
 ---
 title: createStyled | Dank
-description: You can add custom plugins to resolve style or your component before your component reaches styled
+description: Create custom styled components with createStyled function and plugins. Example usage with CustomPlugin and AnimationPlugin.
 ---
 
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
