--- a/example/storybook/src/configuration/Breakpoints/index.stories.mdx
+++ b/example/storybook/src/configuration/Breakpoints/index.stories.mdx
@@ -7,7 +7,7 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 <Meta title="configuration/Breakpoints" />
 
-## Configure your Breakpoints
+# Configure your Breakpoints
 
 To configure breakpoints in `@dank-style`, you can create a `dank.config.js` file where you define your breakpoints and other configuration options. Breakpoints are defined in `mediaQueries` scale.
 
