--- a/example/storybook/src/configuration/SSR/index.stories.mdx
+++ b/example/storybook/src/configuration/SSR/index.stories.mdx
@@ -1,5 +1,5 @@
 ---
-title: SSR | Dank
+title: Server-Side Rendering | Dank
 description: Dank provides support for server-side rendering (SSR) by exporting a flush function to flush out any styles that were generated during the SSR process.
 ---
 
