--- a/example/storybook/src/configuration/ThemeTokens/index.stories.mdx
+++ b/example/storybook/src/configuration/ThemeTokens/index.stories.mdx
@@ -1,5 +1,5 @@
 ---
-title: Tokens | Dank
+title: Tokens | Theme tokens in Dank
 description: Dank uses tokens to store design-related values such as colors, typography, spacing, and more. They are a way of centralizing the values in a single location.
 ---
 
