--- a/example/storybook/src/getting-started/Styled/index.stories.mdx
+++ b/example/storybook/src/getting-started/Styled/index.stories.mdx
@@ -1,5 +1,5 @@
 ---
-title: styled | Dank
+title: styled - Extend existing components | Dank
 description: With styled, you can easily extend existing components and make them customizable and themeable. Dank has provided styled function for this.
 ---
 
