--- a/example/storybook/src/plugins/AnimationPlugin/index.stories.mdx
+++ b/example/storybook/src/plugins/AnimationPlugin/index.stories.mdx
@@ -1,6 +1,6 @@
 ---
 title: Animation Plugin | Dank
-description: Dank provides a Plugin to add support for Animation props.
+description: Learn to add animation props with Dank’s Animation Plugin for dynamic, animated UI elements. Performance impacts and lack of typings are limitations.
 canonical: https://dank.style/
 ---
 
