--- a/example/storybook/src/api/UtilityFunctions/index.stories.mdx
+++ b/example/storybook/src/api/UtilityFunctions/index.stories.mdx
@@ -1,6 +1,6 @@
 ---
 title: Utility Functions | Dank
-description: Dank provides some utility functions for making your life easy.
+description: Create global CSS styles easily with createGlobalStylesWeb function, supporting aliases and tokens for easy integration. Only for web, with some limitations.
 canonical: https://dank.style/
 ---
 
