--- a/example/storybook/src/overview/API/index.stories.mdx
+++ b/example/storybook/src/overview/API/index.stories.mdx
@@ -1,5 +1,5 @@
 ---
-title: API | Dank
+title: API | API's in Dank
 description: A brief about all the API that you get from Dank. With our styled function, you can easily extend existing components and make them customizable and themeable.
 ---
 
