--- a/example/storybook/src/plugins/Introduction/index.stories.mdx
+++ b/example/storybook/src/plugins/Introduction/index.stories.mdx
@@ -1,6 +1,6 @@
 ---
 title: Introduction | Dank
-description: Dank provides a plugin system to extend existing functionality of styled function.
+description: Dank provides a plugin system to extend existing functionality of styled function. It's a great way to add support for new aliases, tokens and beyond.
 canonical: https://dank.style/
 ---
 
