fix: added inspired project links

--- a/example/storybook/src/overview/Introduction/index.stories.mdx
+++ b/example/storybook/src/overview/Introduction/index.stories.mdx
@@ -101,3 +101,5 @@ Though this is internal to the library, it’s great if you know the following:
   - Variants
   - States (e.g. hover, focus)
   - Color mode
+
+This project is inspired by [stitches](https://stitches.dev), [tamagui](https://tamagui.dev) & [dripsy](https://www.dripsy.xyz).
