--- a/example/storybook/src/components/Box/index.stories.mdx
+++ b/example/storybook/src/components/Box/index.stories.mdx
@@ -144,7 +144,7 @@ return (
 
 ## Customizing the Box
 
-For customozing the Box, you have to map styled view to Box. You can refer [dank.style](https://dank.style/) for more information on how to use styled components.
+For customizing the Box, you have to map styled view to Box. You can refer [dank.style](https://dank.style/) for more information on how to use styled components.
 
 ### Usage
 
@@ -152,7 +152,7 @@ For customozing the Box, you have to map styled view to Box. You can refer [dank
 // import the styles
 import { Root } from './components/Box';
 
-// mapping the Box to root component
+// mapping the Text to root component
 const Box = Root;
 
 // Using the box component
