--- a/example/storybook/src/components/Button/index.stories.mdx
+++ b/example/storybook/src/components/Button/index.stories.mdx
@@ -236,7 +236,7 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
         <Table.TD>
           <Text>'row'</Text>
         </Table.TD>
-        <Table.TD></Table.TD>
+        <Table.TD>-</Table.TD>
       </Table.TR>
       <Table.TR>
         <Table.TD>
