--- a/example/storybook/src/components/Link/index.stories.mdx
+++ b/example/storybook/src/components/Link/index.stories.mdx
@@ -107,7 +107,7 @@ Adheres to the [WAI-ARIA design pattern]('https://www.w3.org/WAI/ARIA/apg/#link'
 
 ## Dependencies
 
-- `@universa11y/utils`
+- `@gluestack-ui/utils`
 - `@react-native-aria/focus`
 - `react-native-svg`
 
